# mogfish

./: .eleventy.js  .gitignore  CLAUDE.md  Cargo.toml  README.md  done.yaml  mogfish-training.md  mogfish.md  package.json
.cargo/: config.toml
.github/workflows/: act-acceptance.yml  e2e-install.yml  release.yml
.pebbles/: README.md  events.jsonl
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  ffi.rs  main.rs  parser.rs  qbe_codegen.rs
compiler/tests/: test_advanced.rs  test_memory_limits.rs  test_plugins.rs  test_qbe_stmts.rs
crates/annotator/: Cargo.toml
crates/annotator-cli/: Cargo.toml
crates/annotator-cli/src/: main.rs
crates/annotator-cli/tests/: acceptance.rs  integration_batch.rs  layer1_parser.rs  layer2_daemon.rs
crates/annotator/src/: lib.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: lib.rs
crates/classifier/tests/: acceptance.rs
crates/mogfish-classify/: Cargo.toml
crates/mogfish-classify/src/: main.rs
crates/mogfish-classify/tests/: acceptance.rs
crates/mogfish-engine-mistralrs/: Cargo.toml
crates/mogfish-engine-mistralrs/src/: lib.rs
crates/mogfish-engine-mistralrs/tests/: acceptance.rs
crates/mogfish-host/: Cargo.toml
crates/mogfish-host/src/: lib.rs
crates/mogfish-host/tests/: acceptance.rs
crates/mogfish-mcp/: Cargo.toml
crates/mogfish-mcp/src/: lib.rs  main.rs
crates/mogfish-mcp/tests/: layer5_mcp.rs
crates/mogfish-traits/: Cargo.toml
crates/mogfish-traits/src/: lib.rs
crates/skill-cache/: Cargo.toml
crates/skill-cache/src/: lib.rs
crates/skill-cache/tests/: acceptance.rs
debian/: postinst
docs/: guide.md  lab-notebook.md  status.md
docs/guide/: 02-your-first-mog-program.md  15-embedding.md  15b-plugins.md
docs/plans/: git-subtrees.md  mogfish-outside-in-tdd.md  mogfish-tdd-phases.md  pass2-training.md  xlora-gemma3-tdd.md
examples/: guide_search_host.rs  host.rs  test_timer_event_loop.ts
examples/plugins/: plugin_host.c  plugin_host.rs
examples/plugins/async_plugin_demo/: Cargo.toml  build.rs  compute.mogdecl
mog/: .gitignore
mog/benchmarks/mog/: interrupt-tight-for-range.mog  interrupt-tight-while.mog
mog/capabilities/: timer.mogdecl
mog/capabilities/tools/: cargo.mogdecl  find.mogdecl  gh.mogdecl  git.mogdecl  grep.mogdecl  jq.mogdecl  python3.mogdecl  sed.mogdecl  yq.mogdecl
mog/compiler/tests/: test_memory_limits.rs  test_plugins.rs  test_remaining.rs
mog/docs/guide/: 17-advanced-topics.md
mog/examples/: guide_search_host.c  guide_search_host.rs  host.c  test_ffi.ts
mog/examples/plugins/: plugin_host.rs
mog/mogfmt/src/: main.rs
mog/rqbe/src/: amd64.rs  compile.rs  fold.rs  lib.rs  parse.rs  ssa.rs
mog/rqbe/tests/: integration.rs  parser_tests.rs
mog/runtime-rs/src/: posix.rs  vm.rs
mog/site/_layouts/: base.njk  introduction_page.njk
mogfmt/: Cargo.toml
rqbe/src/: compile.rs  emit.rs  ffi.rs  ir.rs  mem.rs  spill.rs
rqbe/src/amd64/: isel_pass.rs
rqbe/src/arm64/: emit_asm.rs  regs.rs
rqbe/tests/: integration.rs
runtime-rs/: Cargo.toml
runtime-rs/src/: async_rt.rs  gc.rs  lib.rs  plugin.rs  stack_guard.rs  vm.rs  vm_async_rt.rs
scripts/: claude-mogfish  mogfish-model-download  test-run-skill.bash
scripts/mogfish-shims/: test_zsh_shim.bash  zsh
share/mogfish/conf.d/: mogfish.fish
share/mogfish/functions/: __mogfish_execute.fish  __mogfish_generate.fish  __mogfish_run_skill.fish  mogfish-bass.fish  mogfish-disable.fish  mogfish-enable.fish
site/: CNAME  index.njk  introduction.md  styles.css
site/_layouts/: base.njk  introduction_page.njk
site/shiki-languages/: mog.tmLanguage.json
training/: annotation_dpo_pairs.jsonl  annotation_eval.jsonl  annotation_eval_expanded.jsonl  batch_001.jsonl  batch_002.jsonl  batch_003.jsonl  batch_004.jsonl  batch_005.jsonl  batch_006.jsonl  cap_batch_001.jsonl  cap_batch_002.jsonl  cap_batch_003.jsonl  cap_batch_004.jsonl  cap_batch_005.jsonl  cap_batch_006.jsonl  cap_batch_007.jsonl  cap_batch_008.jsonl  cap_batch_009.jsonl  cap_batch_010.jsonl  cap_translations_001.jsonl  cap_translations_002.jsonl  cap_translations_003.jsonl  cap_translations_004.jsonl  cap_translations_005.jsonl  cap_translations_006.jsonl  cap_translations_007.jsonl  cap_translations_008.jsonl  cap_translations_009.jsonl  cap_translations_010.jsonl  cap_translations_011.jsonl  classification_eval.jsonl  classification_train.jsonl  combined_eval.jsonl  combined_ordered_eval.jsonl  eval_annotator.py  export_gguf.py  extract_bash_commands.py  extract_classifications.py  extract_dpo_from_log.py  extract_dpo_pairs.py  (+29 more)
training/combined-gemma4-data/: lora_config.yaml  valid.jsonl
training/mog_spec/: capabilities.txt  showcase_excerpt.mog
training/scraped_annotations/: batch_001.jsonl  batch_002.jsonl  batch_003.jsonl  batch_004.jsonl  batch_005.jsonl  batch_006.jsonl  batch_007.jsonl  batch_008.jsonl  batch_009.jsonl  batch_010.jsonl  batch_011.jsonl  batch_012.jsonl  batch_013.jsonl  batch_014.jsonl  batch_015.jsonl  batch_016.jsonl  batch_017.jsonl  batch_018.jsonl  batch_019.jsonl  batch_020.jsonl  batch_021.jsonl  batch_022.jsonl  batch_023.jsonl  batch_024.jsonl  batch_025.jsonl  batch_026.jsonl  batch_027.jsonl  batch_028.jsonl  batch_029.jsonl  batch_030.jsonl  batch_031.jsonl  batch_032.jsonl  batch_033.jsonl  batch_034.jsonl  batch_035.jsonl  batch_036.jsonl  batch_037.jsonl  batch_038.jsonl  batch_039.jsonl  batch_040.jsonl  (+13 more)
training/scraped_completions/: Oj.fish  __expand-otherpane.fish  _tach.fish  bld.fish  bopca.fish  c..fish  create_branch.fish  edbin.fish  eden.fish  f.fish  git_branch_config.fish  gitx-init.fish  jjcl.fish  jju.fish  na.fish  nerd-font-manager.fish  nubin.fish  obsidian.fish  podlet.fish  port-daddy.fish  pta.fish  rolr.fish  sshh.fish  st.fish  supabase.fish  tars.fish  ttyscheme.fish  xc.fish
training/validate_env/: test.mog  test10.mog  test2.mog  test3.mog  test4.mog  test5.mog  test6.mog  test6b.mog  test6c.mog  test6d.mog  test6e.mog  test7.mog  test8.mog  test9.mog
training/validate_env/capabilities/: awk.mogdecl  (+2 more)
(+9 files in other folders)
