[package]
name = "mogfish-engine-mistralrs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "InferenceEngine backed by llama.cpp for local GGUF model inference"

[dependencies]
mogfish-traits = { path = "../mogfish-traits" }
llama-cpp-4 = { version = "0.2.12", features = ["cuda"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
