[package]
name = "mogfish-engine-mistralrs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "InferenceEngine backed by mistral.rs for local HF safetensors inference"

[dependencies]
mogfish-traits = { path = "../mogfish-traits" }
mistralrs = { git = "https://github.com/AFDudley/mistral.rs.git", rev = "3cd629537", features = ["cuda"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true
schemars = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "create-uqff"
path = "src/bin/create_uqff.rs"

[dev-dependencies]
tempfile.workspace = true
