[package]
name = "mogfish-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Capability host — maps Mog capability calls to subprocess invocations"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
