[package]
name = "mogfish-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP server — query annotations, execute skills, generate Mog scripts"

[[bin]]
name = "mogfish-mcp"
path = "src/main.rs"

[dependencies]
mogfish-traits = { path = "../mogfish-traits" }
mogfish-annotator = { path = "../annotator" }
mogfish-skill-cache = { path = "../skill-cache" }
mogfish-classifier = { path = "../classifier" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
